--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_TOKEN=your_discord_token_here
+DISCORD_TOKEN=MTM0NjM0Njg2MzE5NTk3OTgyOA.GO79-p.kgGJmqDrEU5mbKqp3rhegq5oMNl2qdyaFMKLGk
 GROQ_API_KEY=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
