--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,18 @@
-[project]
+[tool.poetry]
 name = "repl-nix-workspace"
 version = "0.1.0"
 description = "Add your description here"
-requires-python = ">=3.11"
-dependencies = [
-    "discord-py>=2.5.1",
-    "flask>=3.1.0",
-    "groq>=0.18.0",
-    "pynacl>=1.5.0",
-    "python-dotenv>=1.0.1",
-]
+authors = ["Your Name <your.email@example.com>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.11"
+discord-py = "^2.5.1"
+flask = "^3.1.0"
+groq = "^0.18.0"
+pynacl = "^1.5.0"
+python-dotenv = "^1.0.1"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
